# ipyvizzu-story

./: .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  dev-requirements.in  dev-requirements.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  versions.json
.github/workflows/: cd.yml  ci.yml  cicd.yml  doc.yml  doc_build.yml  doc_publish.yml  init.yml  pages.yml  release.yml  site.yml
0.1/: 404.html  index.html  index.md  objects.inv  sitemap.xml
0.1/CODE_OF_CONDUCT/: index.html
0.1/CONTRIBUTING/: index.html
0.1/LICENSE/: index.html
0.1/coverage/: .coverage  covindex.html  d_27b6c2be84f00315___init___py.html  d_4fbc7d151f1416d2___init___py.html  d_6a9c349c8bc56e5b_animation_py.html  d_6a9c349c8bc56e5b_story_py.html  d_6a9c349c8bc56e5b_template_py.html  d_758cb3ce68a6641b___init___py.html  d_758cb3ce68a6641b_story_py.html  d_8a1469af5e6f8be5___init___py.html  d_bc11a4b154daec2b___init___py.html  d_bc11a4b154daec2b_story_py.html  d_d21f6e133e217055___init___py.html  d_d21f6e133e217055_story_py.html  index.html  status.json
0.1/dev/: index.html
0.1/environments/: index.html
0.1/examples/: index.html  index.md
0.1/installation/: index.html  installation.md
0.1/search/: search_index.json
0.1/tutorial/: index.html
0.10/: index.html  objects.inv  sitemap.xml
0.10/CODE_OF_CONDUCT/: index.html
0.10/CONTRIBUTING/: index.html
0.10/LICENSE/: index.html
0.10/coverage/: covindex.html  d_27b6c2be84f00315___init___py.html  d_27b6c2be84f00315___version___py.html  d_6a9c349c8bc56e5b___init___py.html  d_6a9c349c8bc56e5b_animation_py.html  d_6a9c349c8bc56e5b_story_py.html  d_6a9c349c8bc56e5b_template_py.html  d_758cb3ce68a6641b___init___py.html  d_758cb3ce68a6641b_story_py.html  d_bbdd77105d60c31d___init___py.html  d_bc11a4b154daec2b___init___py.html  d_bc11a4b154daec2b_story_py.html  d_c39eedfcb1ca2a30___init___py.html  d_c39eedfcb1ca2a30_story_py.html  d_d21f6e133e217055___init___py.html  d_d21f6e133e217055_story_py.html  index.html  status.json
0.10/dev/: index.html
0.10/environments/: index.html
0.10/examples/: index.html
0.10/installation/: index.html
0.10/search/: search_index.json
0.10/tutorial/: index.html
0.11/: 404.html  objects.inv  sitemap.xml
0.11/CODE_OF_CONDUCT/: index.html
0.11/CONTRIBUTING/: index.html
0.11/LICENSE/: index.html
0.11/coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_27b6c2be84f00315___init___py.html  z_27b6c2be84f00315___version___py.html  z_6a9c349c8bc56e5b___init___py.html  z_6a9c349c8bc56e5b_animation_py.html  z_6a9c349c8bc56e5b_story_py.html  z_6a9c349c8bc56e5b_template_py.html  z_758cb3ce68a6641b___init___py.html  z_758cb3ce68a6641b_story_py.html  z_bbdd77105d60c31d___init___py.html  z_bc11a4b154daec2b___init___py.html  z_bc11a4b154daec2b_story_py.html  z_c39eedfcb1ca2a30___init___py.html  z_c39eedfcb1ca2a30_story_py.html  z_d21f6e133e217055___init___py.html  z_d21f6e133e217055_story_py.html
0.11/dev/: index.html
0.11/environments/: index.html
0.11/installation/: index.html
0.11/search/: search_index.json
0.11/tutorial/: index.html
0.12/: 404.html  index.html  objects.inv  sitemap.xml
0.12/CODE_OF_CONDUCT/: index.html
0.12/CONTRIBUTING/: index.html
0.12/LICENSE/: index.html
0.12/coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_27b6c2be84f00315___init___py.html  z_27b6c2be84f00315___version___py.html  z_6a9c349c8bc56e5b___init___py.html  z_6a9c349c8bc56e5b_animation_py.html  z_6a9c349c8bc56e5b_story_py.html  z_6a9c349c8bc56e5b_template_py.html  z_758cb3ce68a6641b___init___py.html  z_758cb3ce68a6641b_story_py.html  z_bbdd77105d60c31d___init___py.html  z_bc11a4b154daec2b___init___py.html  z_bc11a4b154daec2b_story_py.html  z_c39eedfcb1ca2a30___init___py.html  z_c39eedfcb1ca2a30_story_py.html  z_d21f6e133e217055___init___py.html  z_d21f6e133e217055_story_py.html
0.12/dev/: index.html
0.12/environments/: index.html
0.12/examples/: index.html
0.12/installation/: index.html
0.12/search/: search_index.json
0.12/tutorial/: index.html
0.2/: 404.html  index.html  index.md  sitemap.xml
0.2/CODE_OF_CONDUCT/: index.html
0.2/CONTRIBUTING/: index.html
0.2/LICENSE/: index.html
0.2/coverage/: .coverage  covindex.html  d_27b6c2be84f00315___init___py.html  d_6a9c349c8bc56e5b___init___py.html  d_6a9c349c8bc56e5b_animation_py.html  d_6a9c349c8bc56e5b_story_py.html  d_6a9c349c8bc56e5b_template_py.html  d_758cb3ce68a6641b___init___py.html  d_bbdd77105d60c31d___init___py.html  d_bc11a4b154daec2b_story_py.html  d_c39eedfcb1ca2a30___init___py.html  d_c39eedfcb1ca2a30_story_py.html  d_d21f6e133e217055___init___py.html  d_d21f6e133e217055_story_py.html  index.html  status.json
0.2/dev/: index.html  index.md
0.2/environments/: index.html
0.2/examples/: index.html  index.md
0.2/installation/: index.html  installation.md
0.2/search/: search_index.json
0.2/tutorial/: index.html
0.3/: 404.html  index.html  index.md  objects.inv  sitemap.xml
0.3/CODE_OF_CONDUCT/: index.html
0.3/CONTRIBUTING/: index.html
0.3/LICENSE/: index.html
0.3/coverage/: .coverage  covindex.html  d_21e10ed63b9525a6_story_py.html  d_27b6c2be84f00315___init___py.html  d_6a9c349c8bc56e5b___init___py.html  d_6a9c349c8bc56e5b_story_py.html  d_6a9c349c8bc56e5b_template_py.html  index.html  (+9 more)
0.4/: 404.html  index.html  index.md  sitemap.xml
0.5/: index.html  index.md  objects.inv  sitemap.xml
0.6/: 404.html  index.html  objects.inv  sitemap.xml
0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.8/: 404.html  index.html  objects.inv  sitemap.xml
0.9/: 404.html  index.html  objects.inv  sitemap.xml
community/: annotation_demo.py  dark_theme.ipynb  worldpopulation.ipynb
docs/: CNAME  index.html  installation.md  ipyvizzustory.html  search.js  tutorial.md
tests/: __init__.py  test_datafilter.py  test_init.py  test_jupyterstory.py  test_slide.py  test_step.py  test_story.py  test_storylib.py  test_storysize.py
(+1161 files in other folders)
